--- a/src/pages/diary/diary.html
+++ b/src/pages/diary/diary.html
@@ -12,8 +12,19 @@
 </ion-header>
 
 <ion-content padding>
-  <diary-entry [meal]="'desayuno'" [day]="day" [mealInput]="diary"></diary-entry>
+
+<!--   <div *ngFor="let entry of diary2 | sort: 'order':true " >
+      {{ entry.meal }}
+  </div> -->
+
+<div *ngFor="let entry of diary2" >
+  <diary-entry [meal]="entry.meal" [day]="day" [mealInput]="diary"></diary-entry>
+</div>
+
+  <!-- <diary-entry [meal]="desayuno" [day]="day" [mealInput]="diary"></diary-entry>
+  <diary-entry [meal]="'colacion mañana'" [day]="day" [mealInput]="diary"></diary-entry>
   <diary-entry [meal]="'almuerzo'" [day]="day" [mealInput]="diary"></diary-entry>
+  <diary-entry [meal]="'colacion tarde'" [day]="day" [mealInput]="diary"></diary-entry>
   <diary-entry [meal]="'te'" [day]="day" [mealInput]="diary"></diary-entry>
-  <diary-entry [meal]="'cena'" [day]="day" [mealInput]="diary"></diary-entry>
+  <diary-entry [meal]="'cena'" [day]="day" [mealInput]="diary"></diary-entry> -->
 </ion-content>
