--- a/src/pages/diary/diary-entry/diary-entry.html
+++ b/src/pages/diary/diary-entry/diary-entry.html
@@ -5,7 +5,7 @@
       <span left >{{ mealInput.meal }}</span>
     </ion-card-header>
 
-    <div class="slides" *ngIf="mealInput.localImages">
+    <div class="slides" (click)="mealDetail()" *ngIf="mealInput.localImages">
       <div class="addPicture">
         <button ion-fab mini (click)="addPicture()">
           <ion-icon name="add"></ion-icon>
@@ -18,43 +18,56 @@
       </ion-slides>
     </div>
 
-    <div *ngIf="!mealInput.localImages" class="newMeal">
+    <div *ngIf="!mealInput.localImages && mealInput.text" class="newMeal">
       <div class="addPicture">
         <button ion-fab mini (click)="addPicture()">
           <ion-icon name="add"></ion-icon>
         </button>
       </div>
+      <div class="onlyText" (click)="goToDetail(mealInput)">
+        <p> {{ mealInput.text }} </p>
+      </div>
+    </div>
+
+    <div *ngIf="!mealInput.localImages && !mealInput.text" class="newMeal">
+<!--       <div class="addPicture">
+        <button ion-fab mini (click)="addPicture()">
+          <ion-icon name="add"></ion-icon>
+        </button>
+      </div> -->
       <div class="camera" (click)="addPicture()">
         <ion-icon name="camera"></ion-icon>
       </div>
     </div>
 
-    <ion-card-content (click)="addText()">
-      <span *ngIf="mealInput.text">{{ mealInput.text }}</span>
-      <span *ngIf="!mealInput.text">¿Que comiste?</span>
+    <ion-card-content (click)="addText()" *ngIf="!mealInput.text">
+      <span><ion-icon name="create"></ion-icon> ¿Que comiste?</span>
     </ion-card-content>
 
-    <ion-row>
-     <ion-col center text-center>
-       <span icon-left small ion-text color="secondary" class="okIcon">
-         <ion-icon name="checkmark-circle"></ion-icon>
-       </span>
-       <span icon-left small class="wrongIcon">
-         <ion-icon name="close-circle"></ion-icon>
-       </span>
-     </ion-col>
-     <ion-col>
-       <button ion-button icon-left clear small>
-         <ion-icon name="text"></ion-icon>
-         <div>2 comentarios</div>
-       </button>
-     </ion-col>
-     <ion-col center text-center>
-       <ion-note>
-         11h ago
-       </ion-note>
-     </ion-col>
-   </ion-row>
+    <div *ngIf="mealInput.text || mealInput.localImages">
+      <ion-row>
+       <ion-col center text-center>
+         <span icon-left small ion-text color="secondary" class="okIcon">
+           <ion-icon name="checkmark-circle"></ion-icon>
+         </span>
+         <span icon-left small class="wrongIcon">
+           <ion-icon name="close-circle"></ion-icon>
+         </span>
+       </ion-col>
+       <ion-col>
+         <button ion-button icon-left clear small>
+           <ion-icon name="text"></ion-icon>
+           <div>2 comentarios</div>
+         </button>
+       </ion-col>
+       <ion-col center text-center>
+         <ion-note>
+           11h ago
+         </ion-note>
+       </ion-col>
+     </ion-row>
+    </div>
+    
 
   </ion-card>
 
