--- a/src/pages/diary/diary.html
+++ b/src/pages/diary/diary.html
@@ -14,13 +14,7 @@
 <ion-content padding>
 
 <div *ngFor="let entry of diary" >
-  <diary-entry [day]="day" [mealInput]="entry"></diary-entry>
+  <diary-entry [day]="day" [mealInput]="entry" (detail)="detail($event)" ></diary-entry>
 </div>
 
-  <!-- <diary-entry [meal]="desayuno" [day]="day" [mealInput]="diary"></diary-entry>
-  <diary-entry [meal]="'colacion mañana'" [day]="day" [mealInput]="diary"></diary-entry>
-  <diary-entry [meal]="'almuerzo'" [day]="day" [mealInput]="diary"></diary-entry>
-  <diary-entry [meal]="'colacion tarde'" [day]="day" [mealInput]="diary"></diary-entry>
-  <diary-entry [meal]="'te'" [day]="day" [mealInput]="diary"></diary-entry>
-  <diary-entry [meal]="'cena'" [day]="day" [mealInput]="diary"></diary-entry> -->
 </ion-content>
