--- a/src/pages/diary/diary-entry/diary-entry.html
+++ b/src/pages/diary/diary-entry/diary-entry.html
@@ -5,13 +5,13 @@
       <span left >{{ mealInput.meal }}</span>
     </ion-card-header>
 
-    <div class="slides" (click)="mealDetail()" *ngIf="mealInput.localImages">
+    <div class="slides" *ngIf="mealInput.localImages">
       <div class="addPicture">
         <button ion-fab mini (click)="addPicture()">
           <ion-icon name="add"></ion-icon>
         </button>
       </div>
-      <ion-slides pager [options]="mySlideOptions">
+      <ion-slides pager [options]="mySlideOptions" (click)="goToDetail(mealInput)" tappable>
         <ion-slide *ngFor="let image of mealInput.localImages">
           <img [src]="image" class="slide-image"/>
         </ion-slide>
@@ -24,23 +24,18 @@
           <ion-icon name="add"></ion-icon>
         </button>
       </div>
-      <div class="onlyText" (click)="goToDetail(mealInput)">
+      <div class="onlyText" (click)="goToDetail(mealInput)" tappable>
         <p> {{ mealInput.text }} </p>
       </div>
     </div>
 
     <div *ngIf="!mealInput.localImages && !mealInput.text" class="newMeal">
-<!--       <div class="addPicture">
-        <button ion-fab mini (click)="addPicture()">
-          <ion-icon name="add"></ion-icon>
-        </button>
-      </div> -->
-      <div class="camera" (click)="addPicture()">
+      <div class="camera" (click)="addPicture()" tappable>
         <ion-icon name="camera"></ion-icon>
       </div>
     </div>
 
-    <ion-card-content (click)="addText()" *ngIf="!mealInput.text">
+    <ion-card-content (click)="addText()" tappable *ngIf="!mealInput.text">
       <span><ion-icon name="create"></ion-icon> ¿Que comiste?</span>
     </ion-card-content>
 
