--- a/src/pages/diary/week-calendar/week-calendar.html
+++ b/src/pages/diary/week-calendar/week-calendar.html
@@ -1,19 +1,20 @@
 
 <ion-grid>
   <ion-row>
-    <ion-col width-11 center>
-      <div (click)="previous()"><ion-icon name="arrow-back"></ion-icon></div>
+    <ion-col width-11 center ion-button clear small class="days" (click)="previous()">
+      <ion-icon name="arrow-back"></ion-icon>
     </ion-col>
-    <ion-col width-11 *ngFor="let day of weekDays"
+    <ion-col text-center width-11 ion-button clear small class="days" *ngFor="let day of weekDays"
+      (click)="select(day)"
       [class.today]="day.isToday"
       [class.active]="day.date.isSame(selected)">
-      <div (click)="select(day)">
+      <div>
         <div>{{day.name}}</div>
         <div>{{day.number}}</div>
       </div>
     </ion-col>
-    <ion-col width-11 center>
-      <div (click)="next()"><ion-icon name="arrow-forward"></ion-icon></div>
+    <ion-col width-11 center ion-button clear small class="days" (click)="next()">
+      <ion-icon name="arrow-forward"></ion-icon>
     </ion-col>
   </ion-row>
 </ion-grid>
